<?xml version="1.0"?>
<package format="2">
  <name>libnabo</name>
  <version>1.0.22</version>
  <description>libnabo is a fast K Nearest Neighbour library for low-dimensional spaces.</description>

  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/anybotics/libnabo</url>
  <author email="stephane.magnenat@mavt.ethz.ch">Stéphane Magnenat</author>

  <!-- If a pure-cmake build is desired, the buildtool should be switched to 'cmake' -->
  <!-- On the other hand, if a catkin build is desired, the build tool depend should be 'catkin' -->
  <buildtool_depend>ament_cmake</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libomp-dev</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>catkin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
